Try fixing format issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,10 @@ jobs:
         id: check
         run: |
           git fetch origin ${{ github.base_ref }}
-          github_changes=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep ^.github/ && echo 'true' || echo 'false')
-          echo "backend=$(git diff --name-only origin/${{ github.base_ref }} HEAD | (grep -E '^Lighthouse.Backend(/|.Tests/)' || [ "$github_changes" == "true" ]) && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "frontend=$(git diff --name-only origin/${{ github.base_ref }} HEAD | (grep ^Lighthouse.Frontend/ || [ "$github_changes" == "true" ]) && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "e2e=$(git diff --name-only origin/${{ github.base_ref }} HEAD | (grep ^Lighthouse.EndToEndTests/ || [ "$github_changes" == "true" ]) && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          github_changes=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep -q ^.github/ && echo 'true' || echo 'false')
+          echo "backend=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep -Eq '^Lighthouse.Backend(/|.Tests/)' || [ "$github_changes" == "true" ] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "frontend=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep -q ^Lighthouse.Frontend/ || [ "$github_changes" == "true" ] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "e2e=$(git diff --name-only origin/${{ github.base_ref }} HEAD | grep -q ^Lighthouse.EndToEndTests/ || [ "$github_changes" == "true" ] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
 
   backend:
     name: Verify Backend
