Add display name for package stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,6 +179,7 @@ jobs:
       fileversion: ${{ steps.process_version.outputs.fileversion }}
 
   packageapp:
+    name: Package and Test App
     runs-on: ubuntu-latest
     needs: tag
 
