--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,6 +214,9 @@ jobs:
         run: chmod +x ./publish/linux-x64/Lighthouse
         working-directory: ./Lighthouse.Backend
 
+      - name: List all directories under $GITHUB_WORKSPACE
+        run: find $GITHUB_WORKSPACE -type d
+
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
