Adjust tag dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,8 +147,10 @@ jobs:
 
   tag:
     runs-on: ubuntu-latest
-
     permissions: write-all
+    
+    needs: [backend, frontend, e2etests]
+    if: always()
 
     steps:          
       - uses: actions/checkout@v4
