--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,25 +209,23 @@ jobs:
       - name: Copy update_linux.sh
         run: cp ./Scripts/update_linux.sh ./Lighthouse.Backend/publish/linux-x64/update_linux.sh
 
+      - name: Set linux executable permission
+        run: sudo chmod +x ./publish/linux-x64/Lighthouse
+        working-directory: ./Lighthouse.Backend
+
       - name: Run Command
         run: |
-          chmod +x $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse
-
-          $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
+          sudo $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
 
           echo "Waiting for server to be ready..."
 
-          timeout 60 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
+          timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
 
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
           run-command: |
-            find $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64 -type f
-
-            chmod +x $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse
-
-            $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
+            sudo $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
 
             echo "Waiting for server to be ready..."
 
@@ -254,7 +252,7 @@ jobs:
         run: cp ./Scripts/update_mac.sh ./Lighthouse.Backend/publish/osx-x64/update_mac.sh
 
       - name: Set osx executable permission
-        run: chmod +x ./publish/osx-x64/Lighthouse
+        run: sudo chmod +x ./publish/osx-x64/Lighthouse
         working-directory: ./Lighthouse.Backend
 
       - name: Upload artifact for deployment job
