--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,22 +215,17 @@ jobs:
 
       - name: Run Command
         run: |
-          $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
-
+          ./Lighthouse.Backend/publish/linux-x64/Lighthouse &
           echo "Waiting for server to be ready..."
-
           timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
 
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
           run-command: |
-            sudo $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/Lighthouse &
-
+            ./Lighthouse.Backend/publish/linux-x64/Lighthouse &
             echo "Waiting for server to be ready..."
-
             timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
-
           base-url: 'http://localhost:5000'
 
       - name: Stop Lighthouse Server
