--- a/.github/actions/playwright/action.yml
+++ b/.github/actions/playwright/action.yml
@@ -11,6 +11,11 @@ inputs:
     required: true
     type: string
 
+  run-command-working-directory:
+    description: 'The working directory to run the command in'
+    required: true
+    type: string
+
 
 runs:
   using: "composite"    
@@ -31,13 +36,23 @@ runs:
       shell: bash
       working-directory: ./Lighthouse.EndToEndTests
 
-    - name: Run Playwright tests
+    - name: Run Lighthouse
       run: |
         ${{ inputs.run-command }}
-
-        cd ./Lighthouse.EndToEndTests
-        npx playwright test
       shell: bash
+      working-directory: ${{ inputs.run-command-working-directory }}
+
+    - name: Wait for Lighthouse to start
+      run: |
+        echo "Waiting for server to be ready..."
+        timeout 30 bash -c 'until curl --silent --fail ${{ inputs.base-url }}; do sleep 1; done'
+        echo "Server is ready!"
+      shell: bash
+
+    - name: Run Playwright tests
+      run: npx playwright test
+      shell: bash
+      working-directory: ./Lighthouse.EndToEndTests
       env:
         LIGHTHOUSEURL: ${{ inputs.base-url }}
 
