--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,18 +213,11 @@ jobs:
         run: sudo chmod +x ./publish/linux-x64/Lighthouse
         working-directory: ./Lighthouse.Backend
 
-      - name: Run Command
-        run: |
-          nohup ./publish/linux-x64/Lighthouse > lighthouse.log 2>&1 &
-        working-directory: ./Lighthouse.Backend
-
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
-          run-command: |            
-            echo "Waiting for server to be ready..."
-            timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
-            echo "Server is ready!"
+          run-command: 'nohup ./publish/linux-x64/Lighthouse > lighthouse.log 2>&1 &'  
+          run-command-working-directory: ./Lighthouse.Backend
           base-url: 'http://localhost:5000'
 
       - name: Stop Lighthouse Server
@@ -293,8 +286,8 @@ jobs:
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
-          run-command: |
-            docker run -p 8080:8080 -d --restart always ghcr.io/letpeoplework/lighthouse:latest
+          run-command: 'docker run -p 8080:8080 -d --restart always ghcr.io/letpeoplework/lighthouse:latest'
+          run-command-working-directory: ./Lighthouse.Backend
           base-url: 'http://localhost:8080'
 
   deploy:
