--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -216,24 +216,16 @@ jobs:
       - uses: ./.github/actions/playwright
         name: Playwright Tests
         with:
-          run-command: 'nohup ./publish/linux-x64/Lighthouse > lighthouse.log 2>&1 &'  
-          run-command-working-directory: ./Lighthouse.Backend
+          run-command: './Lighthouse &'  
+          run-command-working-directory: ./Lighthouse.Backend/publish/linux-x64
           base-url: 'http://localhost:5000'
 
       - name: Stop Lighthouse Server
         if: always()
         run: |
           pkill Lighthouse || true
-
-          cat lighthouse.log
-
-          echo "Writing logs..."
-          for file in ./publish/linux-x64/logs/*; do
-            cat "$file"
-          done
-          echo "Deleting logs folder..."
-          rm -rf $GITHUB_WORKSPACE/Lighthouse.Backend/publish/linux-x64/logs
-        working-directory: ./Lighthouse.Backend
+          rm -rf logs
+        working-directory: ./Lighthouse.Backend/publish/linux-x64
 
       - name: publish win-x64
         run: dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/win-x64
