--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,14 +215,12 @@ jobs:
 
       - name: Run Lighthouse
         run: |
-          ./Lighthouse > lighthouse.log 2>&1 &
+          nohup ./Lighthouse > lighthouse.log 2>&1 &
           echo "Waiting for server to be ready..."
           timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
           echo "Server is ready!"
-        working-directory: ./Lighthouse.Backend/publish/linux-x64
-
-      - name: Lighthouse Log
-        run: cat lighthouse.log
+          
+          cat lighthouse.log
         working-directory: ./Lighthouse.Backend/publish/linux-x64
 
       - uses: ./.github/actions/playwright
